syntax = "proto3";

option go_package = "./pb/generated;pb";
import "google/protobuf/empty.proto";

service AccountService {
    //Login
    rpc GetOTPForLogin(GetOTPForLoginRequest) returns (GetOTPForLoginResponse);   //done
    rpc UserLoginViaOTP(UserLoginViaOTPRequest) returns (UserLoginResponse);    //done
    rpc UserLoginViaPassword(UserLoginViaPasswordRequest) returns (UserLoginResponse);    //done

    //Sign up
    rpc GetOTPForSignUp(GetOTPForSignUpRequest) returns (GetOTPForSignUpResponse);  //done
    rpc UserSignUpViaOTP(UserSignUpViaOTPRequest) returns (UserSignUpViaOTPResponse);   //done
    rpc SignedUpUserSettingPw(SignedUpUserSettingPwRequest) returns (SignedUpUserSettingPwResponse);    //done

    //profile
    rpc GetProfile(GetProfileRequest) returns (GetProfileResponse);    //done
    rpc UpdateProfile(UpdateProfileRequest) returns (google.protobuf.Empty);    //done
    rpc UpdatePasswordUsingOldPw(UpdatePasswordUsingOldPwRequest) returns (google.protobuf.Empty);    //done
    
    //Password reset
    rpc GetOTPForPwChange(GetOTPForPwChangeRequest) returns (GetOTPForPwChangeResponse);    //done
    rpc VerifyOTPForPwChange(VerifyOTPForPwChangeRequest) returns (VerifyOTPForPwChangeResponse);   //done
    rpc SetNewPwAfterVerifyingOTP(SetNewPwAfterVerifyingOTPRequest) returns (google.protobuf.Empty);    //unimplemented

}

message SetNewPwAfterVerifyingOTPRequest {
    int32 userId = 1;
    string newPassword = 2;
}

message UpdatePasswordUsingOldPwRequest {
    int32 userId = 1;
    string oldPassword = 2;
    string newPassword = 3;
}

message GetProfileRequest {
    int32 userId = 1;
}

message GetProfileResponse {
    string firstName = 1;
    string lastName = 2;
    string email = 3;
    string address = 4;
    string pincode = 5;
    string phoneNumber = 6;
}

message UserLoginViaPasswordRequest {
    string phoneNumber = 1;
    string password = 2;
}

message SignedUpUserSettingPwRequest {
    int32 userId = 1;
    string newPassword = 2;
}

message UpdateProfileRequest {
    int32 userId = 1;
    string firstName = 2;
    string lastName = 3;
    string email = 4;
    string address = 5;
    string pincode = 6;
}
    

message SignedUpUserSettingPwResponse {
    string token = 1;
}

//Login
message GetOTPForLoginRequest {
    string phoneNumber = 1;
}

message GetOTPForLoginResponse {
    string message = 1;
}

message UserLoginViaOTPRequest {
    string phoneNumber = 1;
    string otp = 2;
}

message UserLoginResponse {
    string message = 1;
    string token = 2;
    LoggingUserDetails userDetails = 3;
}
message LoggingUserDetails {
    int32 id = 1;
    string firstName = 2;
    string lastName = 3;
    string phoneNumber = 4;
}
// Sign up
message GetOTPForSignUpRequest {
    string phoneNumber = 1;
}

message GetOTPForSignUpResponse {
    string message = 1;
}

message UserSignUpViaOTPRequest {
    string phoneNumber = 1;
    string otp = 2;
}

message UserSignUpViaOTPResponse {
    string message = 1;
    string token = 2;
    SignedUpUserDetails userDetails = 3;
}
message SignedUpUserDetails {
    int32 id = 1;
    string phoneNumber = 4;
}
message GetOTPForPwChangeRequest {
    int32 userId = 1;
}
message GetOTPForPwChangeResponse {
    string last4Digits = 1;
}

message VerifyOTPForPwChangeRequest {
    int32 userId = 1;
    string otp = 2;
}

message VerifyOTPForPwChangeResponse {
    string tempToken = 1;
}


message VerifyOTPForPwChangeResponse2 {
    string tempToken = 1;
}